# hiro

./: .env.example  .gitignore  README.md  README_zh-CN.md  langgraph.json  main.py  pyproject.toml
server/: app.py  db.py
server/agent/: __init__.py  agent_runtime.py  custom_agent.py  execution_trace.py  information_collect_agent.py  mcp_loader.py  message_store.py  run_context.py  session_events.py  streaming.py  token_usage.py  writeup_agent.py
server/agent/events/: __init__.py  session_events.py  streaming.py
server/agent/graph/: __init__.py  execution_graph.py
server/agent/persistence/: __init__.py  message_store.py  token_usage.py
server/agent/runtime/: __init__.py  agent_runtime.py  context.py  (+3 more)
server/core/: config.py  installation.py  logger.py  security.py  util.py
server/middleware/: auth.py
server/models/: __init__.py  agent.py  item.py  llm.py  mcp.py  models.py  rag.py  schemas.py  token.py  user.py
server/schemas/: __init__.py  agent.py  auth.py  installation.py  items.py  llm.py  mcp.py  rag.py  tokens.py  users.py
server/service/: mcp_service.py  rag_service.py
skills/web-information-collecting/: SKILL.md
skills/writeup/: SKILL.md
tests/: __init__.py  test_agent.py  test_agent_runtime.py  test_custom_agent.py  test_custom_agent_graph.py  test_information_collect_agent.py  test_mcp_service.py  test_sandboxed_backend.py  test_session_stats.py  test_stream_tokens.py  test_tool_call_ids.py  test_util.py  test_writeup_agent.py
web/: index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.vue  style.css
(+55 files in other folders)
