[project]
name = "hiro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.3",
    "fastapi>=0.136.3",
    "langchain[deepseek]>=1.3.1",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.2.0",
    "pyjwt>=2.8.1",
    "langchain-modal>=0.0.4",
    "sqlalchemy>=2.0.50",
    "aiosqlite>=0.22.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.12",
    "pymysql>=1.2.0",
    "aiomysql>=0.3.2",
    "argon2-cffi>=25.1.0",
    "chromadb>=1.5.9",
    "pymilvus>=3.0.0",
    "python-multipart>=0.0.29",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.3.17",
    "pypdf>=5.3.0",
    "docx2txt>=0.8",
    "beautifulsoup4>=4.13.3",
    "langchain-text-splitters>=1.1.2",
    "langchain-ollama>=1.1.0",
    "mcp>=1.2.0",
    "sse-starlette>=2.1.0",
    "pytest>=9.0.3",
    "langchain-mcp-adapters>=0.2.2",
]

[tool.optional-dependencies]
db = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "passlib[bcrypt]>=1.7.4",
]
